# pyhton

./: .gitignore  README.md  main.py  pyproject.toml
examples/: arithmetic.yp  conditions.yp  functions.yp  hello_world.yp  loops.yp
src/: cli.py  interpreter.py  lexer.py  parser.py  python_words.py  transpiler.py  typo_engine.py
src/cli/: __init__.py  cli.py  file_runner.py  help.py  interactive.py  main.py
src/cli_modules/: __init__.py  file_runner.py  interactive.py
src/core/: __init__.py  interpreter.py  lexer.py  parser.py
src/language/: __init__.py  python_words.py  typo_engine.py
src/pyhton/core/: parser.py
tests/: test_lexer.py  test_parser.py  test_transpiler.py  test_typo_engine.py
