[project]
name = "pyhton"
version = "0.1.0"
description = "A python based esolang where every word must be a typo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["blessed"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

[project.scripts]
pyhton = "src.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.4.1"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
